--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,13 @@
-
+{
+  "functions": {
+    "api/bot.js": {
+      "maxDuration": 60
+    }
+  },
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/api/bot"
+    }
+  ]
+}
